snowchains_core/tests/snapshots/yukicoder_retrieve_test_cases__contest_281_samples_outcome.snap
---
source: snowchains_core/tests/yukicoder-retrieve-test-cases.rs
expression: outcome
---
{
  "problems": [
    {
      "contest": {
        "id": "281",
        "display_name": "yukicoder contest 266",
        "url": "https://yukicoder.me/contests/281",
        "submissions_url": "https://yukicoder.me/contests/281/submissions?my_submission=enabled"
      },
      "index": "A",
      "url": "https://yukicoder.me/problems/no/1229",
      "screen_name": "3976",
      "display_name": "ラグビーの得点パターン",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "0",
            "out": "1",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "5",
            "out": "1",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample3",
            "in": "20",
            "out": "4",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample4",
            "in": "100",
            "out": "55",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    },
    {
      "contest": {
        "id": "281",
        "display_name": "yukicoder contest 266",
        "url": "https://yukicoder.me/contests/281",
        "submissions_url": "https://yukicoder.me/contests/281/submissions?my_submission=enabled"
      },
      "index": "B",
      "url": "https://yukicoder.me/problems/no/1230",
      "screen_name": "4945",
      "display_name": "Hall_and_me",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": {
          "Float": {
            "relative_error": 1e-8,
            "absolute_error": 1e-8
          }
        },
        "cases": [
          {
            "name": "sample1",
            "in": "100 0 0",
            "out": "1.000000000000",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "1 1 1",
            "out": "0.666666666667",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    },
    {
      "contest": {
        "id": "281",
        "display_name": "yukicoder contest 266",
        "url": "https://yukicoder.me/contests/281",
        "submissions_url": "https://yukicoder.me/contests/281/submissions?my_submission=enabled"
      },
      "index": "C",
      "url": "https://yukicoder.me/problems/no/1231",
      "screen_name": "2651",
      "display_name": "Make a Multiple of Ten",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "5\n1 3 5 7 9",
            "out": "4",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "9\n1 1 1 1 1 1 1 1 1",
            "out": "0",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample3",
            "in": "10\n1 1 1 1 1 1 1 3 7 9",
            "out": "8",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    },
    {
      "contest": {
        "id": "281",
        "display_name": "yukicoder contest 266",
        "url": "https://yukicoder.me/contests/281",
        "submissions_url": "https://yukicoder.me/contests/281/submissions?my_submission=enabled"
      },
      "index": "D",
      "url": "https://yukicoder.me/problems/no/1232",
      "screen_name": "3014",
      "display_name": "2^x = x",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "3\n5\n3\n2\n",
            "out": null,
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    },
    {
      "contest": {
        "id": "281",
        "display_name": "yukicoder contest 266",
        "url": "https://yukicoder.me/contests/281",
        "submissions_url": "https://yukicoder.me/contests/281/submissions?my_submission=enabled"
      },
      "index": "E",
      "url": "https://yukicoder.me/problems/no/1233",
      "screen_name": "3265",
      "display_name": "割り切れない気持ち",
      "test_suite": {
        "type": "Batch",
        "timelimit": "3s 153ms",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "3\n1 5 3\n",
            "out": "7\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "9\n9 9 9 9 9 9 9 9 9",
            "out": "0",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    },
    {
      "contest": {
        "id": "281",
        "display_name": "yukicoder contest 266",
        "url": "https://yukicoder.me/contests/281",
        "submissions_url": "https://yukicoder.me/contests/281/submissions?my_submission=enabled"
      },
      "index": "F",
      "url": "https://yukicoder.me/problems/no/1234",
      "screen_name": "1379",
      "display_name": "典型RMQ",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "4\n1 2 3 4\n3\n2 1 4 0\n1 1 2 3\n2 1 4 0\n",
            "out": "1\n3\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "7\n-307365022 7783992359 -4511812607 6579404095 5544278142 -2979154502 -351466228\n10\n1 1 7 -744\n2 2 2 0\n1 1 7 6176\n2 3 3 0\n1 1 4 7390\n2 6 6 0\n2 6 6 0\n2 5 5 0\n1 3 5 5733\n2 5 5 0\n",
            "out": "7783991615\n-4511807175\n-2979149070\n-2979149070\n5544283574\n5544289307\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample3",
            "in": "16\n-5636340242 558311214 179674564 -4196014631 4022013400 5437335202 -2472229134 8341925757 -4153003391 1020988529 4818814275 -1072289912 -3707805533 7612427682 -4413623203 -1139382259\n10\n1 14 14 -5404\n2 12 15 0\n1 4 15 1510\n2 3 12 0\n2 14 14 0\n1 7 8 5589\n1 10 15 3941\n1 5 11 -5813\n2 15 15 0\n2 3 3 0\n",
            "out": "-4413623203\n-4196013121\n7612423788\n-4413617752\n179674564\n",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    }
  ]
}
