snowchains_core/tests/snapshots/yukicoder_retrieve_test_cases__problem_no_1_samples_messages.snap
---
source: snowchains_core/tests/yukicoder-retrieve-test-cases.rs
expression: messages

---
[
    OnRequest(
        GET,
        Url {
            scheme: "https",
            username: "",
            password: None,
            host: Some(
                Domain(
                    "yukicoder.me",
                ),
            ),
            port: None,
            path: "/problems/no/1",
            query: None,
            fragment: None,
        },
    ),
    OnResponse(
        200,
        Ok,
    ),
    OnRequest(
        GET,
        Url {
            scheme: "https",
            username: "",
            password: None,
            host: Some(
                Domain(
                    "yukicoder.me",
                ),
            ),
            port: None,
            path: "/api/v1/problems/no/1",
            query: None,
            fragment: None,
        },
    ),
    OnResponse(
        200,
        Ok,
    ),
]
